# dotbackup.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build.yml
docs/: dotbackup.1  dotbackup.1.scdoc  dotbackup.5.scdoc  dotsetup.1  dotsetup.1.scdoc
src/: cli.rs  config.rs  consts.rs  error.rs  lib.rs  utils.rs
src/cli/: action.rs  config.rs
src/cli/config/: app.rs
src/config/: app.rs
src/consts/: colors.rs
src/utils/: expandhome.rs  expanduser.rs  log.rs
tests/: helper.rs  integration_test.rs
tests/configs/: app_backup_dir.yml  basic.yml  complex_script.yml  expandhome.yml  fail_exit.yml  global_backup_dir.yml  ignore.yml  os_files.yml  unknown_option.yml
