[package]
name = "dotbackup"
version = "2.0.0"
edition = "2024"
description = "Dotfile backup utility"
homepage = "https://github.com/jaxvanyang/dotbackup.rs"
license-file = "LICENSE"
default-run = "dotbackup"

[dependencies]
dirs = "6.0.0"
expanduser = "1.2.2"
glob = "0.3.2"
saphyr = "0.0.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
