[package]
name = "dotbackup"
version = "2.2.0"
edition = "2024"
description = "Dotfile backup utility"
homepage = "https://github.com/jaxvanyang/dotbackup.rs"
license-file = "LICENSE"
default-run = "dotbackup"

[dependencies]
dirs = "6.0.0"
glob = "0.3.2"
serde = { version = "1.0.228", features = ["derive"]}
yaml_serde = "0.10.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[dev-dependencies]
serial_test = "3.4.0"
